# terraform-cost-policy-guard

./: Dockerfile  Makefile  README.md  pyproject.toml
docs/: CASE_STUDY.md
docs/github-actions/: ci.yml
infra/docker/: docker-compose.yml
infra/k8s/: deployment.yaml
infra/terraform/: main.tf
infra/terraform/templates/: deployment.yaml.tftpl
reports/: budget-readiness-review.md  plan-history-review.md  risky-policy-review.md
scripts/: evaluate_sample.sh
src/terraform_cost_policy_guard/: __init__.py  api.py  cli.py  models.py  policies.py  reports.py
tests/: test_api.py  test_cli.py  test_policies.py
tests/fixtures/: budget_review.json  plan_history.json  risky_plan.json  safe_plan.json
